--- a/Toys/Toys.csproj
+++ b/Toys/Toys.csproj
@@ -42,6 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ball.cs" />
+    <Compile Include="Box.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="IHasDepth.cs" />
+    <Compile Include="IHasHeight.cs" />
+    <Compile Include="IHasSpeed.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
